2009-01-07  Francis Lachapelle  <flachapelle@inverse.ca>

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-saveAction]): for recurrent events with an end date, the method
	_adjustRecurrentRules must be called unconditionally. This fixes
	the missing occurence on the last day.

2008-01-06  Ludovic Marcotte  <lmarcotte@inverse.ca>
	
	* SoObjects/Appointments/SOGoCalendarComponent.m
	([SOGoCalendarComponent -_filterComponent:]):
	We now set the proper component summary just like
	we do in the Web UI when 'securing' the
	returned component. Also adjusted the Localizable.strings
	files accordingly.

2008-12-30  Ludovic Marcotte  <lmarcotte@inverse.ca>

	* Dropped the following files:
	UI/Scheduler/UIxAppointmentProposal.m
	UI/Scheduler/UIxTaskProposal.m
	* SoObjects/Appointments/SOGoAppointmentFolder.m
	SoObjects/Contacts/SOGoContactGCSFolder.m
	UI/WebServerResources/SchedulerUI.js
	Fixed the escaping of characters and associated
	search methods.
	* SoObjects/SOGo/SOGoGCSFolder.m
	([SOGoGCSFolder aclsForUser:forObjectAtPath:]):
	Added two new defaults to control the default
	ACLs when none are specified:
	SOGoCalendarDefaultRoles and SOGoContactsDefaultRoles
	They are both arrays in which we set strings,
	for example :
	SOGoCalendarDefaultRoles = ("ObjectCreator", "PublicViewer");
	SOGoContactsDefaultRoles = ("ObjectEditor"); 

2008-12-30  Francis Lachapelle  <flachapelle@inverse.ca>

	* SoObjects/Appointments/SOGoAppointmentObject.m
	([SOGoAppointmentObject -newOccurenceWithID:]): fixed the start
	date when returning an occurrence of an all-day event.

	* SoObjects/Appointments/SOGoAppointmentFolder.m
	([SOGoAppointmentFolder
	-fixupCycleRecord:cycleRange:firstInstanceCalendarDateRange:forViewRange:]):
	Fixed the start/end dates and recurrence id of events that span a
	time period where the daylight saving time changes.
	([SOGoAppointmentFolder
	-_appendCycleException:firstInstanceCalendarDateRange:fromRow:forRange:toArray:]):
	idem.
